--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust"
+name = "pyweekend-rust"
 version = "0.1.0"
 authors = ["Adrian Delgado <ajdm_3000@hotmail.com>"]
 edition = "2018"
